--- a/styles.css
+++ b/styles.css
@@ -99,4 +99,81 @@ i {
 h1 {
   font-size: 2rem;
   font-weight: 500;
+  text-shadow: 0 3px 3px lightgray;
+}
+
+.hamburger {
+  display: none;
+  background-color: transparent;
+  border: none;
+  font-size: 2rem;
+}
+
+@media screen and (max-width: 50rem) {
+  .social-links {
+    display: none;
+  }
+
+  .hamburger {
+    display: inline;
+    cursor: pointer;
+  }
+
+  .hamburger-icon {
+    transition: 0.25s;
+  }
+
+  .hamburger-icon:hover {
+    color: #000;
+    transform: rotate(90deg);
+  }
+
+  .navbar {
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .small-screen-navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 1rem 2rem;
+  }
+
+  .links {
+    flex-direction: column;
+    align-self: flex-start;
+    gap: 0;
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    transition: 0.5s;
+  }
+
+  .links-active {
+    height: 224px;
+  }
+
+  li {
+    padding: 1rem 2rem;
+    transition: 0.25s;
+  }
+
+  li:hover {
+    background-color: #92b6f0;
+    padding-left: 3rem;
+  }
+
+  a:hover {
+    color: #fff;
+  }
+
+  a {
+    z-index: 1;
+    padding-inline: 80%;
+    margin-inline: -80%;
+    padding-block: 1rem;
+    margin-block: -1rem;
+  }
 }
